building out note functionality, cannot get the edit and add to work

--- a/css/index.less
+++ b/css/index.less
@@ -39,7 +39,7 @@ General styles (General Module, wrapping around the modules bellow)
 
 body{
     font-family:@genFont;
-    background-color: @backgroundColor;
+    background-color:@backgroundColor;
 }
 
 h1{
@@ -51,4 +51,9 @@ h1{
     width: 200px;
     margin: 2px 0;
     background-color:@noteBackground;
+    border: @thickBorder;
+    position: absolute;
+}
+.board {
+    background-color: @backgroundColor;
 }
