fixed issue with it not binding the answer to the note

--- a/css/index.less
+++ b/css/index.less
@@ -40,6 +40,7 @@ General styles (General Module, wrapping around the modules bellow)
 body{
     font-family:@genFont;
     background-color:@backgroundColor;
+    font-size:20px;
 }
 
 h1{
