working on adding explanation

--- a/css/index.less
+++ b/css/index.less
@@ -51,7 +51,7 @@ h1{
     text-decoration: underline;
     padding:@genPad;
 }
-#welcomeText{
+.welcomeText{
     font-size:25px;
     padding:@genPad;
 }
