working on adding explanation

--- a/css/index.less
+++ b/css/index.less
@@ -27,7 +27,7 @@ CSS reset
 @noteBackground: rgb(225, 225, 225);
 @backgroundColor: #05B7FF;
 @hightlightColor: #A5DDFE;
-@genPad:2rem;
+@genPad:1rem;
 @thickBorder: solid 3px black;
 @titleFont:'Baloo Da', cursive;
 @genFont:'Indie Flower', cursive;
@@ -51,15 +51,18 @@ h1{
     text-decoration: underline;
     padding:@genPad;
 }
-.welcomeText{
-    font-size:20px;
+#welcomeText{
+    font-size:19px;
     padding:@genPad;
+}
+.welcomeTextLi{
+    font-size:17px;
 }
 
 .note{
     height: 200px;
     width: 200px;
-    margin-top:200px;
+    margin-top:300px;
     margin-right:2rem;
     margin-left:2rem;
     margin-bottom:300px;
